tests/rosetta/out/Smalltalk/address-of-a-variable.st
" Generated by Mochi compiler v0.10.30 on 2006-01-02T15:04:05Z
"
| myVar |
myVar := 3.14.
Transcript show: 'value as float:'; show: ' '; show: (myVar) printString; cr.
Transcript show: 'address: <not available>'; cr.
